[gd_scene load_steps=13 format=3 uid="uid://cxhmdhhxah4pn"]

[ext_resource type="Texture2D" uid="uid://cwysk7glaudot" path="res://Assets/Actor/Characters/OrangeNinjaMage/SpriteSheet.png" id="1_2gkss"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_w0t3v"]

[sub_resource type="Animation" id="Animation_1arnq"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 3), Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_uew3k"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_r6ea7"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_um8aw"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8axir"]
_data = {
"walk_down": SubResource("Animation_1arnq"),
"walk_left": SubResource("Animation_uew3k"),
"walk_right": SubResource("Animation_r6ea7"),
"walk_up": SubResource("Animation_um8aw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eis6q"]
size = Vector2(15.9091, 4.76191)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdj2p"]
size = Vector2(16, 7)

[sub_resource type="Animation" id="Animation_tp4mf"]
resource_name = "Hurt"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.67451, 0, 0.0980392, 0.501961), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_aiak6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.67451, 0, 0.0980392, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6daeo"]
_data = {
"Hurt": SubResource("Animation_tp4mf"),
"RESET": SubResource("Animation_aiak6")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_mask = 3
script = ExtResource("1_w0t3v")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("1_2gkss")
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -19.0
offset_top = -17.0
offset_right = 21.0
offset_bottom = 23.0
color = Color(0.67451, 0, 0.0980392, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_8axir")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(0.880001, 0.84)
shape = SubResource("RectangleShape2D_eis6q")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_rdj2p")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6daeo")
}

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
